Shrinkwrap projection issue in editmode #43324

Closed
opened 2015-01-20 04:46:31 +01:00 by Mikhail Rachinskiy · 8 comments

System Information
Windows 8.1 x64
Renderer: GeForce GTX 860M/PCIe/SSE2

Blender Version
Broken: 2.73 a1f4821

Short description of error
Shrinkwrap projection issue in editmode with Array and Curve modifiers. If you'll disable either of them, projection would work just fine.

Exact steps for others to reproduce the error

Disable Array or Curve modifier → No projection issue

Use case for this modifier composition — is jewelry design, with this and Duplifaces I can easily make parametric mountings along the ring.
For example (an actual project made in blender): https://pbs.twimg.com/media/BYGK4TtCcAAvAcY.png:large

**System Information** Windows 8.1 x64 Renderer: GeForce GTX 860M/PCIe/SSE2 **Blender Version** Broken: 2.73 a1f4821 **Short description of error** Shrinkwrap projection issue in editmode with Array and Curve modifiers. If you'll disable either of them, projection would work just fine. **Exact steps for others to reproduce the error** - Open blend file [shrinkwrap_issue.blend](https://archive.blender.org/developer/F138395/shrinkwrap_issue.blend) - Select red squares and enter editmode → Projection issue # Disable Array or Curve modifier → No projection issue Use case for this modifier composition — is jewelry design, with this and Duplifaces I can easily make parametric mountings along the ring. For example (an actual project made in blender): https://pbs.twimg.com/media/BYGK4TtCcAAvAcY.png:large
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy

Added subscribers: @mont29, @ideasman42, @Sergey

Added subscribers: @mont29, @ideasman42, @Sergey

@mont29, @ideasman42, do you have clues about what's going on? Can't quickly spot what's the exact issue in there..

@mont29, @ideasman42, do you have clues about what's going on? Can't quickly spot what's the exact issue in there..
Bastien Montagne self-assigned this 2015-01-20 11:45:04 +01:00

wild bet: crappy normals are not up-to-date… Will check.

wild bet: crappy normals are not up-to-date… Will check.

This issue was referenced by d8c20fbb66

This issue was referenced by d8c20fbb6628a40cd83f1ecac5d0838c07100b24

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d8c20fbb66.

Closed by commit d8c20fbb66.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43324
No description provided.