Fix T43324: Shrinkwrap projection issue in editmode.

Nice stupid error in low-level `get_cddm` helper, was probably affecting other
modifiers too actualy!