source/blender/modifiers/intern/MOD_util.c
@@ -159,8 +159,8 @@ DerivedMesh *get_cddm(Object *ob, struct BMEditMesh *em, DerivedMesh *dm, float 
 	if (dm) {
 		if (dm->type != DM_TYPE_CDDM) {
 			dm = CDDM_copy(dm);
-			CDDM_apply_vert_coords(dm, vertexCos);
 		}
+		CDDM_apply_vert_coords(dm, vertexCos);
 
 		if (use_normals) {
 			DM_ensure_normals(dm);
